--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ pyvenv.cfg
 venv/
 pip-selfcheck.json
 config.py
+myenv/
 
 ### VisualStudioCode ###
 .vscode/*
@@ -137,6 +138,8 @@ config.py
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+vscode/
+settings.json
 
 # Local History for Visual Studio Code
 .history/
